docs: Add documentation for update user
